--- a/src/styles.css
+++ b/src/styles.css
@@ -138,7 +138,7 @@
 .swiper-pagination-bullet {
   height: 0.4rem !important;
   width: 0.4rem !important;
-  background-color: var(--color-primary) !important;
+  background-color: white !important;
   transition: width 0.3s ease !important;
 }
 
